--- a/vuelos.html
+++ b/vuelos.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="estilos.css">
     <script src="https://kit.fontawesome.com/f3288c7ca8.js" crossorigin="anonymous"></script>
 
+
+    
+
+
 </head>
 <body>
     <!--Header-->
@@ -33,7 +37,63 @@
         <h2>VUELOS AL MEJOR PRECIO</h2>
         <p>Encontrá los vuelos al mejor precio y pagalos en cuotas sin interés</p>
         <img src="./img/vuelos2.jpg" alt="">
+
     </section>
+
+
+
+    <!--  Vuelos  -->
+
+    <div class="grupo__1">
+        <h2>Filipina</h2>
+        <figure>
+            <img src="./img/filipina.jpg" alt="">
+        </figure>
+        <h4>UN VIAJE EXCLUSIVO, PARA LOS AMANTES DE LA NATURALEZA, VIDA SALVAJE Y PLAYAS PARADISÍACAS.  EL VIAJE INCLUYE:  <br>- Vuelos aéreos internacionales volando por Ethiopian Airlines con despacho de un equipaje de 23 kg. Por persona incluido</h4>
+        <p>U$D 5.000</p>
+        <a href="#">VER MAS</a>
+   
+    </div>
+    
+    <div class="grupo__1">
+        <h2>Venecia</h2>
+        <figure>
+            <img src="./img/venecia.jpg" alt="">
+        </figure>
+        <h4> EL  PROGRAMA  INCLUYE:  PASAJES AÉREOS COMPLETOS VOLANDO CON ETHIOPIAN AIRLINES, CON UNA VALIJA A DESPACHARDE HASTA 20 KG <br> + UNA VALIJA DE MANO DE HASTA 8 KG + MOCHILA O CARTERA</h4>
+        <p>U$D 5.500</p>
+        <a href="#">VER MAS</a>
+   
+    </div>
+
+    <div class="grupo__1">
+        <h2>Italia</h2>
+        <figure>
+            <img src="./img/italia.jpg" alt="">
+        </figure>
+        <h4>Atrévete a un viaje mágico, experiencias inolvidables!  <br> EL  PROGRAMA  INCLUYE:  PASAJES AÉREOS COMPLETOS VOLANDO CON ETHIOPIAN AIRLINES<br>CON UNA VALIJA A DESPACHARDE HASTA 20 KG. + UNA VALIJA DE MANO DE HASTA 8 KG + MOCHILA O CARTERA. TODOS LOS TRASLADOS </h4>
+        <p>U$D 7.000</p>
+        <a href="#">VER MAS</a>
+   
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -79,5 +139,57 @@
             <small>&copy;2022 <b>Rosarioi</b> - Todos los Derechos Reservados</small>
         </div>
     </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
