--- a/vuelos.html
+++ b/vuelos.html
@@ -70,9 +70,9 @@
     </div>
     
     <div class="grupo__1">
-        <h2>Venecia</h2>
+        <h2>Honalulu</h2>
         <figure>
-            <img src="./img/venecia.jpg" alt="">
+            <img src="./img/Honalulu.jpg" alt="">
         </figure>
         <h4> EL  PROGRAMA  INCLUYE:  PASAJES AÉREOS COMPLETOS VOLANDO CON ETHIOPIAN AIRLINES, CON UNA VALIJA A DESPACHARDE HASTA 20 KG <br> + UNA VALIJA DE MANO DE HASTA 8 KG + MOCHILA O CARTERA</h4>
         <p>U$D 5.500</p>
