--- a/vuelos.html
+++ b/vuelos.html
@@ -136,8 +136,8 @@
             </div>
             <div class="box">
                 <h2>Sobre Nosotros</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, saepe!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, id.</p>
+                <p>Rosario un grupo que ayuda a cumplir el sueño a las gentes</p>
+                <p>Fundada en Agosto de 2017</p>
             </div>
             <div class="box">
                 <h2>Siguenos</h2>
