--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,9 @@
     <script src="https://kit.fontawesome.com/f3288c7ca8.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+  <!--bootstrap -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="./img/logo.jpg" alt="" width="150px"></a>
@@ -40,24 +43,9 @@
           </div>
         </div>
       </nav>
-   
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      
+   <!--FOOOTER-->
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
