--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <!---Logoo-->
+    <!---bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="./img/logo.jpg" alt="" width="150px"></a>
@@ -46,7 +46,7 @@
       </nav>
    
  
-
+  <!--PARTE DEL INICIO-->
     <div class="inicio">
             <h3>Viaja con Rosa<span>rioi</span></h3>
             <img src="./img/Inicio.jpg" alt="">
@@ -82,7 +82,7 @@
 
 
 
-
+  <!--FOOTER-->
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
