--- a/vuelos.html
+++ b/vuelos.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <!--Header-->
+    <!--bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="./img/logo.jpg" alt="" width="150px"></a>
@@ -70,7 +70,7 @@
     </div>
     
     <div class="grupo__1">
-        <h2>Honalulu</h2>
+        <h2>Honolulu</h2>
         <figure>
             <img src="./img/Honalulu.jpg" alt="">
         </figure>
@@ -92,37 +92,7 @@
     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
     <!--Footer-->
 
     <footer class="pie-pagina">
