--- a/ofertas.html
+++ b/ofertas.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 >
-    
+    <!--bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="./img/logo.jpg" alt="" width="150px"></a>
@@ -44,6 +44,7 @@
         </div>
       </nav>
 
+    <!--oFERTAS-->
       <div class="ofertas">
         <h3>Bienvenido a Rosa<span>rioi</span> Ofertas</h3>
         <p>Tenemos varias ofertas </p>
@@ -76,47 +77,7 @@
         </div>
       </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+    <!--FOOOTER-->
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
