--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
         </div>
       </nav>
 
-
+      <!---Contactos-->
 
       <section class="contacto_">
         <h2>Conectate con nosotros</h2>
@@ -75,7 +75,7 @@
          <a href="#">Enviar</a>
       </div>
    
-        
+        <!--Mapa-->
       <div class="map_">
         <h3>Donde estamos</h3>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.1248431160398!2d-60.63265448485801!3d-32.94771318092077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab1dc9b6d36f%3A0x97b9e9584d94d851!2sMonumento%20Hist%C3%B3rico%20Nacional%20a%20la%20Bandera!5e0!3m2!1ses-419!2sar!4v1665066784200!5m2!1ses-419!2sar" width="1000" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
